Refactor scoring and alignment parameters in NW-flex
- Moved default scoring parameters to a new module `default.py` for better organization.
- Updated all references to `get_default_scoring` to use the new structure.
- Added align_params that also includes semiglobal True/False.
- params can be augmented with extra_predecessors and/or X for self-contained kwargs.
- still goes through FlexInput to reach the C code.
- next: write the cigar tests.

--- a/notebooks/03_NWflex_Validation.ipynb
+++ b/notebooks/03_NWflex_Validation.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "35a115a0",
    "metadata": {
     "execution": {
@@ -96,7 +96,6 @@
     "import matplotlib.gridspec as gridspec\n",
     "\n",
     "from nwflex.validation import (\n",
-    "    get_default_scoring,\n",
     "    nwg_global,\n",
     "    check_standard_case,\n",
     "    check_AZB_case,\n",
@@ -113,6 +112,8 @@
     "    REGION_FILL_COLORS,\n",
     "    REGION_LABEL_COLORS,\n",
     ")\n",
+    "\n",
+    "from nwflex.default import get_default_scoring\n",
     "\n",
     "from nwflex.plot.colors import HEATMAP_COLORMAPS\n",
     "grid_color_map = HEATMAP_COLORMAPS['diverging']\n",
@@ -1190,7 +1191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nwflex",
+   "display_name": "stormflex",
    "language": "python",
    "name": "python3"
   },
