--- a/notebooks/06_NWflex_STR_locus.ipynb
+++ b/notebooks/06_NWflex_STR_locus.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "000b57ae",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,8 @@
     "from nwflex.ep_patterns import build_EP_STR_phase\n",
     "\n",
     "# Scoring and plotting\n",
-    "from nwflex.validation import get_default_scoring, random_dna\n",
+    "from nwflex.validation import random_dna\n",
+    "from nwflex.default import get_default_scoring\n",
     "from nwflex.plot.matrix import plot_flex_matrices\n",
     "from nwflex.repeats import STRLocus"
    ]
@@ -525,7 +526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nwflex",
+   "display_name": "stormflex",
    "language": "python",
    "name": "python3"
   },
