--- a/notebooks/01_Alignment_Basics.ipynb
+++ b/notebooks/01_Alignment_Basics.ipynb
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6bc1313c",
    "metadata": {
     "execution": {
@@ -874,7 +874,7 @@
    ],
    "source": [
     "# Scoring scheme\n",
-    "from nwflex.validation import get_default_scoring\n",
+    "from nwflex.default import get_default_scoring\n",
     "from nwflex.plot import plot_score_system\n",
     "\n",
     "\n",
@@ -1270,7 +1270,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nwflex",
+   "display_name": "stormflex",
    "language": "python",
    "name": "python3"
   },
