--- a/notebooks/02_NWflex_Core.ipynb
+++ b/notebooks/02_NWflex_Core.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bae831cc",
    "metadata": {
     "execution": {
@@ -56,7 +56,7 @@
     "    build_EP_single_block,\n",
     "    build_EP_semiglobal,\n",
     ")\n",
-    "from nwflex.validation import get_default_scoring\n",
+    "from nwflex.default import get_default_scoring\n",
     "from nwflex.plot import (\n",
     "    plot_flex_matrices,\n",
     "    plot_score_system,\n",
@@ -1040,7 +1040,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nwflex",
+   "display_name": "stormflex",
    "language": "python",
    "name": "python3"
   },
@@ -1054,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.25"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
