--- a/notebooks/04_NWflex_STR.ipynb
+++ b/notebooks/04_NWflex_STR.ipynb
@@ -77,8 +77,8 @@
     "# Alignment functions\n",
     "from nwflex.aligners import align_with_EP\n",
     "\n",
-    "# Scoring and validation\n",
-    "from nwflex.validation import get_default_scoring\n",
+    "# Default scoring\n",
+    "from nwflex.default import get_default_scoring\n",
     "\n",
     "# Plotting\n",
     "from nwflex.plot import (\n",
@@ -2700,7 +2700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scratchpad",
+   "display_name": "stormflex",
    "language": "python",
    "name": "python3"
   },
@@ -2714,7 +2714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
