--- a/notebooks/05_NWflex_Cython.ipynb
+++ b/notebooks/05_NWflex_Cython.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5468b745",
    "metadata": {
     "execution": {
@@ -75,7 +75,7 @@
     "from nwflex.ep_intervals import ep_to_intervals\n",
     "\n",
     "# Scoring and alignment helpers\n",
-    "from nwflex.validation import get_default_scoring\n",
+    "from nwflex.default import get_default_scoring\n",
     "from nwflex.dp_core import AlignmentResult\n",
     "\n",
     "# Plotting\n",
@@ -968,7 +968,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nwflex",
+   "display_name": "stormflex",
    "language": "python",
    "name": "python3"
   },
@@ -982,7 +982,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.25"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
